# esp32c3

./: .gitignore  .gitmodules  ESP32Wifi.md  FreeRTOS.md  JTAG调试.md  README.md
base_mac_address/: sdkconfig
bleprph/: sdkconfig
bleprph/main/: bleprph.h  gatt_svr.c  main.c
coc_blecent/: sdkconfig  sdkconfig.old
coc_blecent/main/: main.c
coc_bleprph/: sdkconfig  sdkconfig.old
coc_bleprph/main/: main.c
espnow/main/: espnow_example_main.c
hello_world/: sdkconfig  sdkconfig.old
hello_world/main/: CMakeLists.txt  app_main.c  hello_world_main.c
hello_world/main/blink/: blink.c
hello_world/main/createTask/: create_task.c  create_task.h
hello_world/main/event/: group_sync.c  group_sync.h  group_wait.c  group_wait.h
hello_world/main/gdb/: test.c  test.h
hello_world/main/hello/: hello_world.c
hello_world/main/message/: send.c  send.h
hello_world/main/queue/: deliver_data.c  deliver_data.h  mail_box.c  mail_box.h  multiple_sender.c  multiple_sender.h  queue_set.c  queue_set.h
hello_world/main/semaphore/: binary_semaphore.c  binary_semaphore.h  count_semaphore.c  count_semaphore.h  mutex.c  mutex.h  recursive_mutex.c  recursive_mutex.h
hello_world/main/st7735/: ascii_font.h  esp_lcd_panel_st7735.c  esp_lcd_panel_st7735.h  test.c
hello_world/main/st7789/: esp_lcd_panel_st7789.c  spi_test.c  test.c  test.h
hello_world/main/stream/: buffer_size.c  buffer_size.h  send.c  send.h
hello_world/main/task/: create_task.c  create_task.h  task_list.c  task_list.h  task_notify.c  task_notify.h  task_notify_value.c  task_notify_value.h  task_param.c  task_param.h  task_priority.c  task_priority.h  task_stack.c  task_stack.h  task_suspend.c  task_suspend.h  watch_dog.c  watch_dog.h
hello_world/main/taskParam/: task_param.c  task_param.h
hello_world/main/taskPriority/: task_priority.c  task_priority.h
hello_world/main/timer/: soft_timer.c  soft_timer.h
http/http_request/: sdkconfig  sdkconfig.old
http/http_request/main/: http_request_example_main.c
http/simple/: sdkconfig  sdkconfig.old
http/simple/main/: main.c
http/ws_echo_server/: sdkconfig  sdkconfig.old  websocket.html
http/ws_echo_server/main/: ws_echo_server.c
lvgl_demo/: CMakeLists.txt  README.md  lv_conf.h  sdkconfig  sdkconfig.old
lvgl_demo/main/: CMakeLists.txt  esp_lcd_panel_st7735.c  esp_lcd_panel_st7789.c  esp_lcd_panel_st7789.h  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c
mqtt/tcp/: sdkconfig  sdkconfig.old
mqtt/tcp/main/: app_main.c
phy_prph/: sdkconfig  sdkconfig.old
softAP/: sdkconfig  sdkconfig.old
softAP/main/: Kconfig.projbuild
