# idf_component_register(SRCS "hello_world_main.c" "hello/hello_world.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "blink/blink.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "task/create_task.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "task/task_param.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "task/task_priority.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "task/task_suspend.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "task/task_suspend.c" "task/task_list.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "task/task_stack.c" "task/task_list.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "task/watch_dog.c" "task/task_list.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "queue/deliver_data.c" "task/task_list.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" "queue/multiple_sender.c" "task/task_list.c" INCLUDE_DIRS "")
idf_component_register(SRCS "hello_world_main.c" "queue/queue_set.c" "task/task_list.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "hello_world_main.c" INCLUDE_DIRS "")
