# idf_component_register(SRCS "app_main.c" "hello/hello_world.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "blink/blink.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/create_task.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/task_param.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/task_priority.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/task_suspend.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/task_suspend.c" "task/task_list.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/task_stack.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/watch_dog.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/task_notify.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "task/task_notify_value.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "queue/deliver_data.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "queue/multiple_sender.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "queue/queue_set.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "queue/mail_box.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "timer/soft_timer.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "semaphore/binary_semaphore.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "semaphore/count_semaphore.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "semaphore/mutex.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "semaphore/recursive_mutex.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "event/group_wait.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "event/group_sync.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "stream/send.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "stream/buffer_size.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "message/send.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "gdb/test.c" INCLUDE_DIRS "")
idf_component_register(SRCS "app_main.c" "st7735/esp_lcd_panel_st7735.c" "st7735/test.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" "st7789/esp_lcd_panel_st7789.c" "st7789/test.c" INCLUDE_DIRS "")
# idf_component_register(SRCS "app_main.c" INCLUDE_DIRS "" PRIV_REQUIRES blink)
